[package]
name = "juggle"
version = "0.1.1"
authors = ["Kazik24 <kazik24official@gmail.com>"]
edition = "2018"
description = "Async task switching for cooperative multitasking in single thread environments with no_std support."
documentation = "https://docs.rs/juggle"
readme = "README.md"
homepage = "https://github.com/Kazik24/juggle"
repository = "https://github.com/Kazik24/juggle"
license = "MIT OR Apache-2.0"
keywords = ["async", "future", "single-thread", "non-preemptive", "schedule"]
categories = ["asynchronous", "embedded", "no-std"]

[features]
default = ["std"]
std = []

[dependencies]
smallvec = { version = "1.4.2", features = ["union"]}
once_cell = { version = "1.7.2", default-features = false, features = []}

[dev-dependencies]
rand = "0.7.3"
smol = "1.0.1"
